# gbc

./: .gitignore  0.bootstrap.js  Cargo.toml  Makefile  NOTES.md  README.md  TODO.md  bootstrap.js  flake.nix  index.html  shell.nix
.github/workflows/: gh-pages.yml  rust.yml  tests.yaml
emu/: Cargo.toml
emu-wasm/: .gitignore  Cargo.toml  README.md
emu-wasm/src/: lib.rs
emu-wasm/www/: README.md  index.html  index.js  package.json
emu/src/: main.rs
emu/tests/: blargg_tests.rs  common.rs
lib/: Cargo.toml
lib/src/: cartridge.rs  cpu.rs  debug.rs  dma.rs  error.rs  instructions.rs  joypad.rs  lib.rs  memory.rs  ppu.rs  registers.rs  rtc.rs  timer.rs
src/: cartridge.rs  cpu.rs  error.rs  instructions.rs  main.rs  memory.rs  registers.rs
src/debugger/: main.rs
src/gbc/: cartridge.rs  cpu.rs  debug.rs  instructions.rs  joypad.rs  lib.rs  memory.rs  ppu.rs  registers.rs  utils.rs
