[package]
name = "gbc"
version = "0.1.0"
authors = ["Assil Ksiksi <cyph0nik@gmail.com>"]
edition = "2018"

[lib]
name = "gbc"
path = "src/gbc/lib.rs"

[[bin]]
name = "gbc"
path = "src/main.rs"
test = false
required-features = ["gui"]

[[bin]]
name = "gbc_dbg"
path = "src/debugger/main.rs"
test = false
required-features = ["debug"]

[features]
gui = ["sdl2"]
debug = []

[dependencies]
sdl2 = { version = "0.34.3", features = [ "bundled", "static-link" ], optional = true }
