[package]
name = "gbcemu"
version = "0.1.0"
authors = ["Assil Ksiksi <cyph0nik@gmail.com>"]
edition = "2018"

[features]
debug = ["gbc/debug"]

[dependencies]
gbc = { path = "../lib" }
sdl2 = { version = "0.34.3", features = [ "bundled", "static-link" ] }
structopt = { version = "0.3", default-features = false }
log = "0.4"
env_logger = "0.8"
